refactor to use nestjs
