# src/dto/error.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class ErrorDto {
+  @ApiProperty({
+    description: 'Error message',
+    example: 'Symbol is required',
+  })
+  error: string;
+}
